src/parse/snapshots/protox__parse__tests__parse_file-7.snap
---
source: src/parse/tests.rs
expression: parser.parse_file()
---
Ok(
    File {
        span: 0..68,
        syntax: Proto2,
        package: None,
        imports: [],
        options: [],
        items: [
            Enum(
                Enum {
                    name: Ident {
                        value: "Bar",
                        span: 59..62,
                    },
                    options: [],
                    values: [],
                    reserved: [],
                    comments: Comments {
                        leading_detached_comments: [],
                        leading_comment: None,
                        trailing_comment: None,
                    },
                    span: 54..68,
                },
            ),
        ],
    },
)
