src/parse/snapshots/protox__parse__tests__parse_file.snap
---
source: src/parse/tests.rs
expression: parser.parse_file()
---
Ok(
    File {
        span: 0..0,
        syntax: Proto2,
        package: None,
        imports: [],
        options: [],
        items: [],
    },
)
