src/parse/snapshots/protox__parse__tests__parse_group-12.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        FloatSuffixOutsideTextFormat {
            span: 19..21,
        },
        UnexpectedToken {
            expected: "an integer",
            found: "1.0",
            span: 19..21,
        },
    ],
)
